--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Form</title>
+<title>Projeto Spring 5</title>
 <link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css"
 	rel="stylesheet">
-
-
-
 </head>
 <body>
+
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -35,47 +33,24 @@
 					<li><a href="manipulados">Manipulados</a></li>
 					<li><a href="offMeals">Off Season</a></li>
 				</ul>
-				<form class="navbar-form navbar-left" role="search">
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search">
-					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
-				</form>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="tasks">Tasks</a></li>
-					<li class="dropdown"><a href="#" class="dropdown-toggle"
-						data-toggle="dropdown" role="button" aria-haspopup="true"
-						aria-expanded="false">Dropdown <span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-						</ul></li>
-				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
 	</nav>
 
-
-	<div class="panel panel-default">
-		<div class="panel-heading">Formulário</div>
-		<div class="panel-body">
-
-			<form action="#" th:action="@{/task}" th:object="${task}"
-				method="post">
-
-				<label>Descrição Tarefa: </label> <input type="text"
-					th:field="*{descricaoTarefa}" /> <input type="submit"
-					value="Enviar form " />
-
-			</form>
-		</div>
+	<div class="page-header">
+		<h1>
+			Seja Bem Vindo à minha página de controle Pessoal relacionado a dieta
+			<small>Navegue entre as abas para mais informações</small>
+		</h1>
 	</div>
 
-
+	<div class="media">
+		<div class="media-left">
+			<a href="#"> <img class="media-object" src="${contextPath}resources/imagens/alert.png" alt="...">
+			</a>
+		</div>
+	</div>
 </body>
 </html>
