--- a/src/main/resources/templates/meals.html
+++ b/src/main/resources/templates/meals.html
@@ -30,6 +30,7 @@
 					<li><a href="mediumCarbMeals">Carbo Médio</a></li>
 					<li><a href="zeroCarbMeals">Carbo Zero</a></li>
 					<li><a href="manipulados">Manipulados</a></li>
+					<li><a href="offMeals">Off Season</a></li>
 				</ul>
 				<form class="navbar-form navbar-left" role="search">
 					<div class="form-group">
@@ -38,7 +39,7 @@
 					<button type="submit" class="btn btn-default">Submit</button>
 				</form>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Link</a></li>
+					<li><a href="tasks">Tasks</a></li>
 					<li class="dropdown"><a href="#" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">Dropdown <span class="caret"></span></a>
